@@ -1,2 +1,4 @@
 [B]Version 1.1.125[/B]
 - sextb - fix listing
+- netfapx - fix playback
+
